<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.story.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/result_upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_image_24" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/galleryButton"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/gallery"
            app:layout_constraintEnd_toStartOf="@+id/cameraButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_preview" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/description"
            android:gravity="start"
            android:padding="8dp"
            android:maxLines="2"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColorHint="#78909C"
            app:layout_constraintTop_toBottomOf="@id/galleryButton" />

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:text="@string/upload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>